--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -6,10 +6,10 @@
   </nav>
   <div class="row">
     <div class="col-md-7">
-      <video-player><h5><em>videoPlayer</em> component goes here</h5></video-player>
+      <video-player video="$ctrl.currentVideo">Please wait</video-player>
     </div>
     <div class="col-md-5">
-      <video-list videos="$ctrl.videos" test="test"></video-list>
+      <video-list videos="$ctrl.videos" select-video="$ctrl.selectVideo"></video-list>
     </div>
   <div>
 </div>
