--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,7 +1,7 @@
 <div id="app container">
   <nav class="navbar">
     <div class="col-md-6 col-md-offset-3">
-      <search><h5><em>search</em> component goes here</h5></search>
+      <search result="$ctrl.result" ><h5><em>search</em> component goes here</h5></search>
     </div>
   </nav>
   <div class="row">
@@ -9,7 +9,7 @@
       <video-player video="$ctrl.currentVideo">Please wait</video-player>
     </div>
     <div class="col-md-5">
-      <video-list videos="$ctrl.videos" select-video="$ctrl.selectVideo"></video-list>
+      <video-list videos="$ctrl.videos" on-click="$ctrl.onClick"></video-list>
     </div>
   <div>
 </div>
