--- a/src/templates/videoPlayer.html
+++ b/src/templates/videoPlayer.html
@@ -1,10 +1,10 @@
 <div class="video-player">
-  <div class="embed-responsive embed-responsive-16by9" ng-show="$ctrl.video">
+  <div class="embed-responsive embed-responsive-16by9" ng-if="$ctrl.video">
     <iframe class="embed-responsive-item" ng-src="{{'https://www.youtube.com/embed/' + $ctrl.video.id.videoId}}" allowFullScreen></iframe>
   </div>
   <div class="video-player-details" ng-show="$ctrl.video">
     <h3>{{$ctrl.video.snippet.title}}</h3>
     <div>{{$ctrl.video.snippet.description}}</div>
   </div>
-  <div ng-hide="$ctrl.video">Please wait</div>
+  <div ng-if="!$ctrl.video">Please wait</div>
 </div>
